deployment/fault-inject-deployment/fault-inject-deployment.yaml
#
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ts-voucher-service-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-voucher-service #do not modify for selector
        version: v2
    spec:
      containers:
      - name: ts-voucher-service-v2
        image: kylinxiang/ts-voucher-service:f1.1
        imagePullPolicy: Always
        ports:
        - containerPort: 16101
